--- a/public/locales/zh-CN/about.json
+++ b/public/locales/zh-CN/about.json
@@ -2,7 +2,7 @@
   "description": "Free ChatGPT 是一个神奇的开源 Web 应用，允许您免费使用 OpenAI 的 ChatGPT API 进行对话！",
   "sourceCode": "在 GitHub 上查看<0>源代码</0>并给它一个⭐️！",
   "initiative": {
-    "description": "看看《<0>开放 ChatGPT 倡议</0>》吧!",
+    "description": "看看《<0>开放 ChatGPT 倡议</0>》吧！",
     "link": "https://medium.com/@ayaka_90553/%E5%BC%80%E6%94%BE-chatgpt-%E5%80%A1%E8%AE%AE-eaac01243dae",
   },
   "support": {
