fix: value range of top_p
valid top_p range should be 0-1

--- a/public/locales/en/model.json
+++ b/public/locales/en/model.json
@@ -4,7 +4,7 @@
   "default": "Default",
   "temperature": {
     "label": "Temperature",
-    "description": "What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or top P but not both. (Default: 1)"
+    "description": "What sampling temperature to use, between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic. We generally recommend altering this or top p but not both. (Default: 1)"
   },
   "presencePenalty": {
     "label": "Presence Penalty",
@@ -12,7 +12,7 @@
   },
   "topP": {
     "label": "Top P",
-    "description": "An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top P probability mass. So 0.1 means only the tokens comprising the top 10% probability mass are considered. We generally recommend altering this or temperature but not both. (Default: 1)"
+    "description": "Number between 0 and 1. An alternative to sampling with temperature, called nucleus sampling, where the model considers the results of the tokens with top p probability mass. So 0.1 means only the tokens comprising the top 10% probability mass are considered. We generally recommend altering this or temperature but not both. (Default: 1)"
   },
   "frequencyPenalty": {
     "label": "Frequency Penalty",
