--- a/public/locales/fr/main.json
+++ b/public/locales/fr/main.json
@@ -37,5 +37,5 @@
   "cloneChat": "Cloner la Conversation",
   "cloned": "Clonée",
   "enterToSubmit": "Entrée pour soumettre",
-  "submitPlaceholder": "Saisissez un message ou sélectionnez [/] pour un prompt prédéfinie..."
+  "submitPlaceholder": "Saisissez un message ou sélectionnez [/] pour un prompt prédéfini..."
 }
