--- a/public/locales/sv/drive.json
+++ b/public/locales/sv/drive.json
@@ -6,5 +6,9 @@
     "stop": "Stop syncing"
   },
   "notice": "Note: you will need to re-login on every visit or every hour",
-  "privacy": "Your privacy is important to us, and to ensure it, Better ChatGPT only has non-sensitive access, meaning it can only create, view, and manage its own files and folders."
+  "privacy": "Your privacy is important to us, and to ensure it, Better ChatGPT only has non-sensitive access, meaning it can only create, view, and manage its own files and folders.",
+  "toast": {
+    "sync": "Sync successful!",
+    "stop": "Syncing stopped"
+  }
 }
