--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -24,7 +24,7 @@
   "setting": "Settings",
   "image": "Image",
   "autoTitle": "Auto generate title",
-  "advancedMode": "Advanced Mode",
+  "advancedMode": "Advanced mode",
   "prompt": "Prompt",
   "promptLibrary": "Prompt Library",
   "name": "Name",
