revamped menu/credits

--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -9,7 +9,8 @@
   "clearConversation": "Clear Conversation",
   "import": "Import",
   "export": "Export",
-  "author": "Made by Jing Hua",
+  "host": "Hosted by Jack Schedel",
+  "author": "Original Repo by Jing Hua",
   "about": "About & Sponsor",
   "api": "API",
   "personal": "Personal",
