revamped menu/credits w/ localization to prevent crashes

--- a/public/locales/da/main.json
+++ b/public/locales/da/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Ryd samtale",
   "import": "Importer",
   "export": "Eksporter",
+  "host": "Hosted by Jack Schedel",
   "author": "Lavet af Jing Hua",
-  "about": "Om & Sponsor",
   "api": "API",
   "personal": "Personlig",
   "free": "Gratis",
