--- a/public/locales/es/main.json
+++ b/public/locales/es/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Limpiar conversación",
   "import": "Importar",
   "export": "Exportar",
+  "host": "Hosted by Jack Schedel",
   "author": "Hecho por Jing Hua",
-  "about": "Acerca de y Patrocinadores",
   "api": "API",
   "personal": "Personal",
   "free": "Gratuito",
