--- a/public/locales/fr/main.json
+++ b/public/locales/fr/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Effacer la conversation",
   "import": "Importer",
   "export": "Exporter",
+  "host": "Hosted by Jack Schedel",
   "author": "Créé par Jing Hua",
-  "about": "À propos et Sponsor",
   "api": "API",
   "personal": "Personnel",
   "free": "Gratuit",
