--- a/public/locales/it/main.json
+++ b/public/locales/it/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Elimina Conversazione",
   "import": "Importa",
   "export": "Esporta",
+  "host": "Hosted by Jack Schedel",
   "author": "Realizzato da Jing Hua",
-  "about": "Info & Sponsor",
   "api": "API",
   "personal": "Personale",
   "free": "Gratuito",
