--- a/public/locales/ja/main.json
+++ b/public/locales/ja/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "会話をクリア",
   "import": "インポート",
   "export": "エクスポート",
+  "host": "Hosted by Jack Schedel",
   "author": "Jing Hua作",
-  "about": "概要 & スポンサー",
   "api": "API",
   "personal": "個人",
   "free": "無料",
