--- a/public/locales/ms/main.json
+++ b/public/locales/ms/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Padam Perbualan",
   "import": "Import",
   "export": "Eksport",
+  "host": "Hosted by Jack Schedel",
   "author": "Dibuat oleh Jing Hua",
-  "about": "Mengenai & Penaja",
   "api": "API",
   "personal": "Peribadi",
   "free": "Percuma",
