--- a/public/locales/nb/main.json
+++ b/public/locales/nb/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Tøm samtale",
   "import": "Importer",
   "export": "Eksporter",
+  "host": "Hosted by Jack Schedel",
   "author": "Laget av Jing Hua",
-  "about": "Om & Sponsor",
   "api": "API",
   "personal": "Personlig",
   "free": "Gratis",
