--- a/public/locales/sv/main.json
+++ b/public/locales/sv/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Rensa konversation",
   "import": "Importera",
   "export": "Exportera",
+  "host": "Hosted by Jack Schedel",
   "author": "Skapad av Jing Hua",
-  "about": "Om & Sponsor",
   "api": "API",
   "personal": "Personlig",
   "free": "Gratis",
