--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "清除会话",
   "import": "导入",
   "export": "导出",
+  "host": "Hosted by Jack Schedel",
   "author": "由 Jing Hua 制作",
-  "about": "关于和赞助",
   "api": "API",
   "personal": "个人",
   "free": "免费",
