--- a/public/locales/zh-TW/main.json
+++ b/public/locales/zh-TW/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "清除會話",
   "import": "匯入",
   "export": "匯出",
+  "host": "Hosted by Jack Schedel",
   "author": "由 Jing Hua 製作",
-  "about": "關於和贊助",
   "api": "API",
   "personal": "個人",
   "free": "免費",
