--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -43,5 +43,5 @@
   "cloneChat": "创建聊天副本",
   "cloned": "已创建副本",
   "enterToSubmit": "按回车键提交",
-  "submitPlaceholder": "输入消息或点击 [/] 以使用提示词…"
+  "submitPlaceholder": "请输入消息"
 }
