--- a/public/locales/zh-HK/main.json
+++ b/public/locales/zh-HK/main.json
@@ -43,5 +43,5 @@
   "cloneChat": "建立傾偈副本",
   "cloned": "建立成功",
   "enterToSubmit": "撳 Enter 鍵提交",
-  "submitPlaceholder": "輸入消息或點擊 [/] 以使用提示詞…"
+  "submitPlaceholder": "请輸入消息"
 }
