--- a/public/locales/zh-TW/main.json
+++ b/public/locales/zh-TW/main.json
@@ -43,5 +43,5 @@
   "cloneChat": "創建聊天副本",
   "cloned": "已創建副本",
   "enterToSubmit": "按回車鍵提交",
-  "submitPlaceholder": "輸入消息或點擊 [/] 以使用提示詞…"
+  "submitPlaceholder": "请输入消息"
 }
