added CloseToTrayToggle button and ability to render components only when running as in Electron

--- a/public/locales/en-US/main.json
+++ b/public/locales/en-US/main.json
@@ -24,6 +24,7 @@
   "setting": "Settings",
   "image": "Image",
   "autoTitle": "Auto generate title",
+  "closeToTray": "Minimize to Tray on Close",
   "advancedMode": "Advanced mode",
   "inlineLatex": "Inline Latex",
   "prompt": "Prompt",
