--- a/public/locales/en-US/main.json
+++ b/public/locales/en-US/main.json
@@ -6,12 +6,13 @@
   "warning": "Warning",
   "clearMessageWarning": "Please be advised that by submitting this message, all subsequent messages will be deleted!",
   "clearConversationWarning": "Please be advised that by confirming this action, all messages will be deleted!",
-  "clearConversation": "Clear Conversation History",
+  "clearConversation": "Clear History",
   "import": "Import",
   "export": "Export",
   "author": "Made by Jing Hua",
   "about": "About & Sponsor",
   "api": "API",
+  "data": "Data",
   "personal": "Personal",
   "free": "Free",
   "downloadChat": "Download Chat",
@@ -19,8 +20,8 @@
   "assistant": "Assistant",
   "system": "System",
   "newChat": "New Chat",
-  "lightMode": "Light Mode",
-  "darkMode": "Dark Mode",
+  "lightMode": "Switch to Light Mode",
+  "darkMode": "Switch to Dark Mode",
   "setting": "Settings",
   "image": "Image",
   "autoTitle": "Auto generate title",
