--- a/public/locales/ro/drive.json
+++ b/public/locales/ro/drive.json
@@ -9,7 +9,7 @@
    },
    "notice": "Notă: va trebui să vă reconectați la fiecare vizită sau la fiecare oră. Pentru a evita suprascrierea datelor din cloud, nu utilizați BetterChatGPT pe mai multe dispozitive în același timp.",
    "privacy": "Confidențialitatea ta este importantă pentru noi și, pentru a o asigura, Better ChatGPT are doar acces non-sensibil, ceea ce înseamnă că poate crea, vizualiza și gestiona doar propriile fișiere și foldere.",
-   "paine prajita": {
+   "toast": {
      "sync": "Sincronizare reușită!",
      "stop": "Sincronizare oprită"
    }
