edit view redesign

--- a/public/locales/da/main.json
+++ b/public/locales/da/main.json
@@ -1,6 +1,6 @@
 {
   "save": "Gem",
-  "saveAndSubmit": "Gem & Send",
+  "saveAndSubmit": "Send",
   "cancel": "Annuller",
   "confirm": "Bekræft",
   "warning": "Advarsel",
