--- a/public/locales/es/main.json
+++ b/public/locales/es/main.json
@@ -1,6 +1,6 @@
 {
   "save": "Guardar",
-  "saveAndSubmit": "Guardar y enviar",
+  "saveAndSubmit": "Enviar",
   "cancel": "Cancelar",
   "confirm": "Aceptar",
   "warning": "Aviso",
