--- a/public/locales/it/main.json
+++ b/public/locales/it/main.json
@@ -1,6 +1,6 @@
 {
   "save": "Salva",
-  "saveAndSubmit": "Salva & Invia",
+  "saveAndSubmit": "Invia",
   "cancel": "Annulla",
   "confirm": "Conferma",
   "warning": "Attenzione",
