--- a/public/locales/ja/main.json
+++ b/public/locales/ja/main.json
@@ -1,6 +1,6 @@
 {
   "save": "保存",
-  "saveAndSubmit": "保存して送信",
+  "saveAndSubmit": "送信",
   "cancel": "キャンセル",
   "confirm": "確認",
   "warning": "警告",
