--- a/public/locales/ms/main.json
+++ b/public/locales/ms/main.json
@@ -1,6 +1,6 @@
 {
   "save": "Simpan",
-  "saveAndSubmit": "Simpan & Hantar",
+  "saveAndSubmit": "Hantar",
   "cancel": "Batal",
   "confirm": "Sahkan",
   "warning": "Amaran",
