--- a/public/locales/nb/main.json
+++ b/public/locales/nb/main.json
@@ -1,6 +1,6 @@
 {
   "save": "Lagre",
-  "saveAndSubmit": "Lagre & Send inn",
+  "saveAndSubmit": "Send inn",
   "cancel": "Avbryt",
   "confirm": "Bekreft",
   "warning": "Advarsel",
