--- a/public/locales/sv/main.json
+++ b/public/locales/sv/main.json
@@ -1,6 +1,6 @@
 {
   "save": "Spara",
-  "saveAndSubmit": "Spara & Skicka in",
+  "saveAndSubmit": "Skicka in",
   "cancel": "Avbryt",
   "confirm": "Bekräfta",
   "warning": "Varning",
