--- a/public/locales/zh-HK/main.json
+++ b/public/locales/zh-HK/main.json
@@ -1,6 +1,6 @@
 {
   "save": "儲存",
-  "saveAndSubmit": "儲存並提交",
+  "saveAndSubmit": "提交",
   "cancel": "取消",
   "confirm": "確認",
   "warning": "警告",
