--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -1,6 +1,6 @@
 {
   "save": "Save",
-  "saveAndSubmit": "Save & Submit",
+  "saveAndSubmit": "Submit",
   "cancel": "Cancel",
   "confirm": "Confirm",
   "warning": "Warning",
