--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -1,6 +1,6 @@
 {
   "save": "保存",
-  "saveAndSubmit": "保存并提交",
+  "saveAndSubmit": "提交",
   "cancel": "取消",
   "confirm": "确认",
   "warning": "警告",
