--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -43,5 +43,6 @@
   "cloneChat": "Clone Chat",
   "cloned": "Cloned",
   "enterToSubmit": "Enter to submit",
-  "submitPlaceholder": "Type a message"
+  "submitPlaceholder": "Type a message",
+  "history": "History"
 }
