--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -43,5 +43,6 @@
   "cloneChat": "创建聊天副本",
   "cloned": "已创建副本",
   "enterToSubmit": "按回车键提交",
-  "submitPlaceholder": "请输入消息"
+  "submitPlaceholder": "请输入消息",
+  "history": "历史记录"
 }
