--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -44,5 +44,7 @@
   "cloned": "Cloned",
   "enterToSubmit": "Enter to submit",
   "submitPlaceholder": "Type a message",
-  "history": "History"
+  "history": "History",
+  "askToFAQ": "Ask to 0xFAQ",
+  "mainSearchPlaceholder": "Ask any questions about Web3 and let 0xFAQ help you answer them."
 }
