--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -46,5 +46,6 @@
   "submitPlaceholder": "Type a message",
   "history": "History",
   "askToFAQ": "Ask to 0xFAQ",
-  "mainSearchPlaceholder": "Ask any questions about Web3 and let 0xFAQ help you answer them."
+  "mainSearchPlaceholder": "Ask any questions about Web3 and let 0xFAQ help you answer them.",
+  "noAnswer": "Sorry, I am unable to answer this question at the moment. 0xFAQ is still in its early version and we are working hard to improve it."
 }
