--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -7,5 +7,7 @@
   "email": "Email",
   "forgotPassword": "Forgot Password?",
   "email.error.empty": "Email is required",
-  "password.error.empty": "Password is required"
+  "password.error.empty": "Password is required",
+  "chooseWay": "Sign in with",
+  "cancel": "Cancel"
 }
