--- a/public/locales/zh-CN/auth.json
+++ b/public/locales/zh-CN/auth.json
@@ -7,5 +7,7 @@
   "email": "Email",
   "forgotPassword": "忘记密码",
   "email.error.empty": "请填写 Email",
-  "password.error.empty": "请输入密码"
+  "password.error.empty": "请输入密码",
+  "chooseWay": "选择登录方式",
+  "cancel": "取消"
 }
