wallet connect button

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -2,6 +2,8 @@
   "signin": "Sign In",
   "signout": "Sign Out",
   "signup": "Sign Up",
+  "username&password": "Password",
+  "connect": "WalletConnect",
   "username": "Username",
   "password": "Password",
   "email": "Email",
