--- a/public/locales/zh-CN/auth.json
+++ b/public/locales/zh-CN/auth.json
@@ -2,6 +2,8 @@
   "signin": "登录",
   "signout": "退出",
   "signup": "注册",
+  "username&password": "用户名密码登录",
+  "connect": "钱包登录",
   "username": "用户名",
   "password": "密码",
   "email": "Email",
