--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -56,5 +56,9 @@
   },
   "voteSuccess": "感谢您的反馈!",
   "requestFailed": "很抱歉，反馈失败，请稍后再试。",
-  "hotQuestion": "热门问题"
+  "hotQuestion": "热门问题",
+  "activity": {
+    "title": "活动",
+    "award": "奖励"
+  }
 }
