--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -45,9 +45,9 @@
   "enterToSubmit": "Enter to submit",
   "submitPlaceholder": "Type a message",
   "history": "History",
-  "askToFAQ": "Ask to Q&A3",
-  "mainSearchPlaceholder": "Ask any questions about Web3 and let Q&A3 help you answer them.",
-  "noAnswer": "Apologies, I'm currently unable to address this question. Q&A3 is still in its initial stages, and we're diligently honing its capabilities. Please bear with us during this exciting evolution.",
+  "askToFAQ": "Ask to QnA3",
+  "mainSearchPlaceholder": "Ask any questions about Web3 and let QnA3 help you answer them.",
+  "noAnswer": "Apologies, I'm currently unable to address this question. QnA3 is still in its initial stages, and we're diligently honing its capabilities. Please bear with us during this exciting evolution.",
   "searchStatus": {
     "loading": "Preparing...",
     "done": "Finshed!",
@@ -64,6 +64,6 @@
   "freetip": "Limited Time Free",
   "voteTip": {
     "title": "Are you satisfied with the answer?",
-    "content": "Your upvotes or downvotes help us continually improve. In return, we'll reward you with Q&A3 Credit, which you'll be able to exchange for Tokens in the future."
+    "content": "Your upvotes or downvotes help us continually improve. In return, we'll reward you with QnA3 Credit, which you'll be able to exchange for Tokens in the future."
   }
 }
