--- a/public/locales/ru/model.json
+++ b/public/locales/ru/model.json
@@ -8,7 +8,7 @@
   "default": "По умолчанию",
   "temperature": {
     "label": "Температура",
-    "description": "Значение температуры выборки от 0 до 2. Более высокие значения, например 0.8, сделают выходной результат более случайным, в то время как более низкие значения, например 0.2, более фокусированными и детерминированными. Мы обычно рекомендуем изменять это или Top-p, но не оба. (По умолчанию: 1)"
+    "description": "Значение температуры выборки от 0 до 2. Более высокие значения, например 0.8, сделают выходной результат более случайным, в то время как более низкие значения, например 0.2, более фокусированными и детерминированными. Мы обычно рекомендуем изменять это или top-p, но не оба. (По умолчанию: 1)"
   },
   "presencePenalty": {
     "label": "Штраф за присутствие",
@@ -24,5 +24,5 @@
   },
   "defaultChatConfig": "Конфигурация чата по умолчанию",
   "defaultSystemMessage": "Системное сообщение по умолчанию",
-  "resetToDefault": "Сбросить до значения по умолчанию"
+  "resetToDefault": "Восстановить значения по умолчанию"
 }
