--- a/public/locales/ru/about.json
+++ b/public/locales/ru/about.json
@@ -1,5 +1,5 @@
 {
-  "description": "Better ChatGPT - это удивительное открытое веб-приложение, которое позволяет вам бесплатно использовать API ChatGPT от OpenAI!",
+  "description": "Better ChatGPT - это потрясающее открытое веб-приложение, позволяющее вам бесплатно использовать API ChatGPT от OpenAI!",
   "sourceCode": "Ознакомьтесь с <0>исходным кодом</0> на GitHub и поставьте ему ⭐️!",
   "initiative": {
     "description": "Ознакомьтесь с <0><i>Инициативой Open ChatGPT</i></0>!",
@@ -7,20 +7,21 @@
   },
   "support": {
     "title": "Поддержка",
-    "paragraph1": "В Better ChatGPT мы стремимся предоставлять вам полезные и удивительные возможности круглосуточно. И, как и в любом проекте, ваша поддержка и мотивация будут важными составляющими в нашем движении вперед!",
-    "paragraph2": "Если вам понравилось использовать наше приложение, мы просим вас поставить этому <0>проекту</0> ⭐️. Ваше одобрение очень много значит для нас и побуждает нас работать еще усерднее для предоставления наилучшего пользовательского опыта.",
-    "paragraph3": "Если вы хотите поддержать команду, рассмотрите возможность спонсирования через один из приведенных ниже методов. Вся помощь, даже самая маленькая, помогает нам поддерживать и совершенствовать наш сервис.",
+    "paragraph1": "В Better ChatGPT мы стремимся предоставлять вам удивительные возможности круглосуточно. И, как и в любом проекте, ваша поддержка и мотивация играют важную роль в нашем развитии!",
+    "paragraph2": "Если вам понравилось наше приложение, удостойте его <0>⭐️</0>. Ваше одобрение очень значимо для нас и мотивирует продолжать развивать лучший пользовательский опыт.",
+    "paragraph3": "Если вы хотите поддержать команду, рассмотрите возможность спонсирования через один из представленных ниже методов. Любая помощь, даже самая маленькая, способствует улучшению нашего сервиса.",
     "paragraph4": "Спасибо, что являетесь частью нашего сообщества, и мы с нетерпением ждем возможности служить вам лучше в будущем.",
     "alipay": "Alipay",
     "wechatPay": "WeChat"
   },
   "discordServer": {
     "title": "Discord сервер",
-    "paragraph1": "Мы приглашаем вас присоединиться к нашему сообществу Discord! Наш Discord сервер - отличное место для обмена идеями и советами по ChatGPT, а также для отправки запросов на функции для Better ChatGPT. Вы сможете общаться с разработчиками Better ChatGPT, а также с другими энтузиастами искусственного интеллекта, разделяющими вашу страсть.",
-    "paragraph2": "Чтобы присоединиться к нашему серверу, просто нажмите на следующую ссылку: <0>https://discord.gg/g3Qnwy4V6A</0>. Мы ждем вас с нетерпением!"
+    "paragraph1": "Приглашаем вас присоединиться к нашему сообществу Discord! Наш сервер в Discord - отличное место для обмена идеями и советами по ChatGPT, а также для отправки пожеланий на развитие Better ChatGPT. Общайтесь с разработчиками Better ChatGPT и другими энтузиастами искусственного интеллекта, разделяющими вашу страсть.",
+    "paragraph2": "Чтобы присоединиться к нашему серверу, перейдите по следующей ссылке: <0>https://discord.gg/g3Qnwy4V6A</0>. Ждем вас с нетерпением!"
   },
   "privacyStatement": {
     "title": "Заявление о конфиденциальности",
-    "paragraph1": "Мы высоко ценим вашу конфиденциальность и стремимся обеспечить защиту конфиденциальности наших пользователей. Мы не собираем и не храним введенный или полученный от сервера OpenAI текст ни в какой форме. Наш исходный код доступен для проверки данного заявления.",
-    "paragraph2": "Мы уделяем особое внимание безопасности вашего API-ключа и обрабатываем его с максимальной ответственностью. Если вы используете собственный API-ключ, ваш ключ хранится только в вашем браузере и не передается сторонним организациям. Он используется исключительно для предназначенной цели доступа к API OpenAI и не предназначен для других несанкционированных действий."
+    "paragraph1": "Ваша конфиденциальность важна для нас, и мы стремимся гарантировать защиту данных наших пользователей. Мы никаким образом не собираем или храним текст, отправленный или полученный от сервера OpenAI. Наш исходный код открыт для проверки этого утверждения.",
+    "paragraph2": "Мы очень внимательно относимся к безопасности вашего API-ключа и обрабатываем его с максимальной ответственностью. При использовании собственного ключа API, ваш ключ хранится только в вашем браузере и недоступен третьим сторонам. Он используется исключительно для предоставления доступа к API OpenAI без применения для других несанкционированных действий."
+  }
 }
