--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -64,6 +64,6 @@
   "freetip": "Limited Time Free",
   "voteTip": {
     "title": "Are you satisfied with the answer?",
-    "content": "Your upvotes or downvotes help us continually improve. In return, we'll reward you with QnA3 Credit, which you'll be able to exchange for Tokens in the future."
+    "content": "Help us improve by voting. You'll earn QnA3 Credit, exchangeable for Tokens later."
   }
 }
