--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -64,6 +64,6 @@
   "freetip": "Limited Time Free",
   "voteTip": {
     "title": "Are you satisfied with the answer?",
-    "content": "Help us improve by voting. You'll earn QnA3 Credit, exchangeable for Tokens later."
+    "content": "Help us improve by voting. You'll earn QnA3 Credit, eligible for future airdrops."
   }
 }
