--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -2,14 +2,14 @@
   "signin": "Sign In",
   "signout": "Sign Out",
   "signup": "Sign Up",
-  "username&password": "Password",
-  "connect": "WalletConnect",
+  "username&password": "Continue with Email",
+  "connect": "Continue with WalletConnect",
   "username": "Username",
   "password": "Password",
   "email": "Email",
   "forgotPassword": "Forgot Password?",
   "email.error.empty": "Email is required",
   "password.error.empty": "Password is required",
-  "chooseWay": "Sign in with",
+  "chooseWay": "Sign in",
   "cancel": "Cancel"
 }
