--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -65,5 +65,6 @@
   "voteTip": {
     "title": "Are you satisfied with the answer?",
     "content": "Help us improve by voting. You'll earn QnA3 Credit, eligible for future airdrops."
-  }
+  },
+  "typing": "Typing..."
 }
