--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -65,5 +65,6 @@
   "voteTip": {
     "title": "您对答案满意吗？",
     "content": "您的赞成或反对能助我们不断优化，为此，我们会回馈您 QnA3 Credit，未来将可用于兑换 Token。"
-  }
+  },
+  "typing": "正在输入..."
 }
