--- a/public/locales/en-US/api.json
+++ b/public/locales/en-US/api.json
@@ -6,7 +6,7 @@
     "warn": "Additionally, if you provide a custom API endpoint that grants free access to the OpenAI API, you can use ChatGPT without the need to supply an API key by simply leaving the API key field blank. However, it's crucial to be cautious when using third-party API endpoints, as untrustworthy ones may log your personal information in the conversations. Always verify the reliability of an API endpoint before using it to protect your privacy and security."
   },
   "apiKey": {
-    "howTo": "Get your personal API key <0>here</0>.",
+    "howTo": "Get the ZURU API key <0>here</0>.",
     "inputLabel": "API Key"
   },
   "customEndpoint": "Use custom API endpoint",
