--- a/public/locales/it/api.json
+++ b/public/locales/it/api.json
@@ -6,7 +6,7 @@
     "warn": "Inoltre, se si fornisce un endpoint API personalizzato che garantisce l'accesso gratuito all'API OpenAI, è possibile utilizzare ChatGPT senza la necessità di fornire una chiave API, semplicemente lasciando vuoto il campo della chiave API. Tuttavia, è fondamentale essere cauti quando si utilizzano endpoint API di terze parti, poiché quelli non affidabili potrebbero registrare le informazioni personali nelle conversazioni. Verifica sempre l'affidabilità di un endpoint API prima di utilizzarlo per proteggere la tua privacy e la sicurezza."
   },
   "apiKey": {
-    "howTo": "Ottieni la tua chiave API personale <0>qui</0>.",
+    "howTo": "Ottieni la chiave API ZURU <0>qui</0>.",
     "inputLabel": "Chiave API"
   },
   "customEndpoint": "Usa un endpoint API personalizzato",
