--- a/public/locales/zh-HK/api.json
+++ b/public/locales/zh-HK/api.json
@@ -6,7 +6,7 @@
     "warn": "另外，如果你提供自訂嘅 API 端點，而且嗰個端點畀用户免費使用 OpenAI API，噉你唔使填寫 API 金鑰就可以用到 ChatGPT。但係，用第三方 API 端點嗰陣應該留心，因為唔可信嘅 API 端點可能會記低你喺傾偈入面嘅個人訊息。用第三方 API 端點之前要驗證佢是否可信，噉樣可以保護你嘅私隱同安全。"
   },
   "apiKey": {
-    "howTo": "喺<0>呢度</0>獲取你嘅個人 API 金鑰。",
+    "howTo": "在<0>这里</0>获取 ZURU API 密钥。",
     "inputLabel": "API 金鑰"
   },
   "customEndpoint": "使用自訂 API 端點",
