--- a/public/locales/zh-TW/api.json
+++ b/public/locales/zh-TW/api.json
@@ -6,7 +6,7 @@
     "warn": "此外，如果您提供了允許免費訪問 OpenAI API 的自定義 API 端點，您可以通過簡單地將 API 金鑰字段留空來使用 ChatGPT，而無需提供 API 金鑰。然而，在使用第三方 API 端點時必須保持警惕，因為不值得信任的端點可能會在對話中記錄個人信息。在使用 API 端點之前，始終確認其可靠性，以保護您的隱私和安全。"
   },
   "apiKey": {
-    "howTo": "在<0>此處</0>獲取您的個人 API 金鑰。",
+    "howTo": "在<0>这里</0>获取 ZURU API 密钥。",
     "inputLabel": "API 金鑰"
   },
   "customEndpoint": "使用自定義 API 端點",
