--- a/public/locales/ja/api.json
+++ b/public/locales/ja/api.json
@@ -6,7 +6,7 @@
     "warn": "さらに、無料でOpenAI APIにアクセスできるカスタムAPIエンドポイントを提供する場合、APIキー欄を空白にするだけでAPIキーを提供せずにChatGPTを利用できます。ただし、第三者のAPIエンドポイントを利用する際は注意が必要で、信頼性の低いものは会話の中で個人情報を記録することがあります。プライバシーとセキュリティを保護するために、APIエンドポイントを使用する前に信頼性を確認してください。"
   },
   "apiKey": {
-    "howTo": "個人用APIキーは<0>こちら</0>で取得できます。",
+    "howTo": "<0>ここ</0>でZURU APIキーを取得します。",
     "inputLabel": "APIキー"
   },
   "customEndpoint": "カスタムAPIエンドポイントを使用する",
