--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -57,6 +57,9 @@
   "voteSuccess": "感谢您的反馈!",
   "requestFailed": "很抱歉，反馈失败，请稍后再试。",
   "hotQuestion": "热门问题",
+  "trendingEvent": "热点事件挖掘",
+  "event": "事件",
+  "question": "问题",
   "activity": {
     "title": "活动",
     "award": "奖励"
