--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -11,5 +11,8 @@
   "email.error.empty": "Email is required",
   "password.error.empty": "Password is required",
   "chooseWay": "Sign in",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "internal_address": "Custodial Wallet Address",
+  "internal_address_loading": "Generating Custodial Wallet Address ...",
+  "copied": "Address has been copied to the clipboard"
 }
