--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -73,5 +73,6 @@
     "title": "Are you satisfied with the answer?",
     "content": "Help us improve by voting. You'll earn QnA3 Credit, eligible for future airdrops."
   },
-  "typing": "Typing..."
+  "typing": "Typing...",
+  "bsc_error": "Network connection failed"
 }
