--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -12,7 +12,8 @@
   "password.error.empty": "Password is required",
   "chooseWay": "Sign in",
   "cancel": "Cancel",
-  "internal_address": "Custodial Wallet Address",
+  "internal_address": "Custodial Wallet",
+  "external_address": "External Wallet",
   "internal_address_loading": "Generating Custodial Wallet Address ...",
   "copied": "Address has been copied to the clipboard"
 }
