--- a/public/locales/zh-CN/auth.json
+++ b/public/locales/zh-CN/auth.json
@@ -12,7 +12,8 @@
   "password.error.empty": "请输入密码",
   "chooseWay": "选择登录方式",
   "cancel": "取消",
-  "internal_address": "托管钱包地址",
+  "internal_address": "托管钱包",
+  "external_address": "外部钱包",
   "internal_address_loading": "托管钱包地址生成中 ...",
   "copied": "成功复制钱包地址"
 }
