--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -4,6 +4,7 @@
   "signup": "Sign Up",
   "username&password": "Continue with Email",
   "connect": "Continue with WalletConnect",
+  "metamask_connect": "Continue with MetaMask",
   "username": "Username",
   "password": "Password",
   "email": "Email",
