--- a/public/locales/zh-CN/auth.json
+++ b/public/locales/zh-CN/auth.json
@@ -4,6 +4,7 @@
   "signup": "注册",
   "username&password": "用户名密码登录",
   "connect": "钱包登录",
+  "metamask_connect": "MetaMask 钱包登录",
   "username": "用户名",
   "password": "密码",
   "email": "Email",
