claim credit page

--- a/public/locales/zh-CN/auth.json
+++ b/public/locales/zh-CN/auth.json
@@ -15,6 +15,6 @@
   "cancel": "取消",
   "internal_address": "托管钱包",
   "external_address": "外部钱包",
-  "internal_address_loading": "托管钱包地址生成中 ...",
+  "internal_address_loading": "托管钱包地址会在您第一次提问后的一段时间内生成",
   "copied": "成功复制钱包地址"
 }
