--- a/public/locales/zh-CN/auth.json
+++ b/public/locales/zh-CN/auth.json
@@ -16,5 +16,6 @@
   "internal_address": "托管钱包",
   "external_address": "外部钱包",
   "internal_address_loading": "托管钱包地址会在您第一次提问后的一段时间内生成",
-  "copied": "成功复制钱包地址"
+  "copied": "成功复制钱包地址",
+  "wallet_connect": "连接钱包"
 }
