--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -15,7 +15,7 @@
   "cancel": "Cancel",
   "internal_address": "Custodial Wallet",
   "external_address": "External Wallet",
-  "internal_address_loading": "The custodial wallet address will be generated within a certain period of time after your first inquiry.",
+  "internal_address_loading": "The custodial wallet address will be generated within a certain period of time after your first question.",
   "copied": "Address has been copied to the clipboard",
   "wallet_connect": "Connect Wallet"
 }
