--- a/public/locales/en/credit.json
+++ b/public/locales/en/credit.json
@@ -18,6 +18,6 @@
   "claim_link": "Claim Credits",
   "activities": {
     "title": "Ask 3 questions to earn credits",
-    "state": "Today's Questions Asked:"
+    "state": "Today's Questions:"
   }
 }
