--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -74,5 +74,7 @@
     "content": "Help us improve by voting. You'll earn QnA3 Credit, eligible for future airdrops."
   },
   "typing": "Typing...",
-  "bsc_error": "Network connection failed"
+  "bsc_error": "Network connection failed",
+  "have_no_wallet": "Don’t have a wallet?",
+  "create_wallet_question": "How to create a wallet in MetaMask?"
 }
