--- a/public/locales/zh-CN/vote.json
+++ b/public/locales/zh-CN/vote.json
@@ -5,5 +5,7 @@
   "rules_title": "活动规则",
   "vote": "投票",
   "voteSuccess": "投票成功!",
-  "voteTip": "本周活动结束后即将瓜分奖池！"
+  "voteTip": "本周活动结束后即将瓜分奖池！",
+  "voteNotStart": "活动未开始",
+  "voteEnd": "活动已结束"
 }
