--- a/public/locales/zh-CN/credit.json
+++ b/public/locales/zh-CN/credit.json
@@ -12,10 +12,13 @@
   },
   "claim": "领取",
   "credits": "积分",
+  "credits_pool": "奖池",
   "credits_claim": "积分领取",
   "connect_tips": "连接钱包即送 20 积分",
   "claimed": "已领取",
   "claim_link": "去领取积分",
+  "daily_checkin": "每日签到",
+  "votes": "票",
   "activities": {
     "title": "每日提问打卡得积分",
     "state": "今日已提问："
