--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -78,5 +78,6 @@
   "have_no_wallet": "Don’t have a wallet?",
   "create_wallet_question": "How to create a wallet in MetaMask?",
   "vote_rank": "Vote to Earn",
-  "trending": "Trending Events"
+  "trending": "Trending Events",
+  "my_credit_detail": "View My Credit"
 }
