--- a/public/locales/zh-CN/main.json
+++ b/public/locales/zh-CN/main.json
@@ -78,5 +78,6 @@
   "have_no_wallet": "如何创建钱包？",
   "create_wallet_question": "如何使用 MetaMask 创建一个钱包？",
   "vote_rank": "打榜",
-  "trending": "热门"
+  "trending": "热门",
+  "my_credit_detail": "查看我的积分"
 }
