--- a/public/locales/zh-CN/credit.json
+++ b/public/locales/zh-CN/credit.json
@@ -8,7 +8,7 @@
   },
   "external_tips": {
     "title": "外部钱包的积分怎么用？",
-    "description": "1. 参加 QnA3 官方网站的活动可获得积分 \n2. 后续将支持将托管钱包中的积分转移到外部钱包中"
+    "description": "1. 参加QnA3官方活动可以获得积分"
   },
   "claim": "领取",
   "credits": "积分",
