--- a/public/locales/zh-CN/vote.json
+++ b/public/locales/zh-CN/vote.json
@@ -1,7 +1,7 @@
 {
   "title": "为你喜欢的问题打榜!",
   "description": "前3名问题的支持者可以瓜分大量积分",
-  "rules": "1.以上的问题为上周最热门的10个问题。\n2.你可以为你喜欢的所有问题投票，单个问题可以多次投票，每次投票需要消耗外部钱包中的5积分。\n3.每周固定时间投票截止，截止后第一名问题的投票者可平均瓜分10000积分，第二名问题可瓜分5000积分，第三名问题可瓜分1000积分。",
+  "rules": "1.热榜中的问题为上周最热门的10个问题。\n2.你可以为你喜欢的所有问题投票，单个问题可以多次投票，每次投票需要消耗外部钱包中的5积分。\n3.每周固定时间投票截止，截止后第一名问题的投票者可平均瓜分10000积分，第二名问题可瓜分5000积分，第三名问题可瓜分1000积分。",
   "rules_title": "活动规则",
   "vote": "投票",
   "voteSuccess": "投票成功!",
