--- a/public/locales/en/main.json
+++ b/public/locales/en/main.json
@@ -71,7 +71,7 @@
   "freetip": "Limited Time Free",
   "voteTip": {
     "title": "Are you satisfied with the answer?",
-    "content": "Help us improve by voting. You'll earn QnA3 Credit, eligible for future airdrops."
+    "content": "Help us improve by click like/dislike button. You'll earn QnA3 Credit, eligible for future airdrops."
   },
   "typing": "Typing...",
   "bsc_error": "Network connection failed",
